--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "hbs": "^4.0.0"
+    "hbs": "^4.0.0",
+    "mysql2": "^1.6.4",
+    "sequelize": "^4.41.2"
   }
 }
